--- a/EasyAdapter/build.gradle
+++ b/EasyAdapter/build.gradle
@@ -6,16 +6,15 @@ plugins {
 group = 'com.github.wong1988'
 
 android {
-    compileSdkVersion 31
-    buildToolsVersion "31.0.0"
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -32,10 +31,7 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compileOnly 'androidx.appcompat:appcompat:1.3.1'
+    compileOnly 'androidx.recyclerview:recyclerview:1.2.1'
+    compileOnly 'com.airbnb.android:lottie:4.2.1'
 }
