--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EasyAdapter">
+        <activity android:name=".StaggeredGridHorizontalActivity"></activity>
         <activity
             android:name=".StaggeredGridVerticalActivity"
             android:exported="false" />
